# Platinum

./: README.md  meson.build
include/: p_api.h  p_app.h  p_display_wayland.h  p_display_win32.h  p_display_x11.h  p_graphics.h  p_graphics_vulkan.h  p_platform_linux.h  p_platform_windows.h  p_util.h  p_wayland.h  p_win32.h  p_window.h  p_x11.h  phantom.h  platinum.h
shaders/: meson.build  shader.frag  shader.vert
src/: _graphics.h  _graphics_vulkan.h  _window.h  _window_x11.h  p_app.c  p_app_linux.c  p_app_windows.c  p_events_linux.c  p_events_windows.c  p_graphics.c  p_graphics_vulkan.c  p_graphics_vulkan.h  p_linux_app.c  p_linux_events.c  p_vulkan.c  p_wayland_window.c  p_win32_window.c  p_window.c  p_window_wayland.c  p_window_win32.c  p_window_x11.c  p_windows_app.c  p_windows_events.c  p_x11_vulkan.c  p_x11_window.c
src/util/: p_debug_mem.c  p_dynarr.c  p_file.c  p_log.c  p_logger.c  p_thread.c
test/: test_p_dynarr.c
